# tools/SchemaToCSharp/Rename.cs
@@ -5,5 +5,6 @@ internal static class Rename
     public static readonly Dictionary<string, string> Types = new(StringComparer.OrdinalIgnoreCase)
     {
         { "CdsClearanceRequest", "CustomsClearanceRequest" },
+        { "CdsDecision", "CustomsClearanceDecision" },
     };
 }
